tests/error/enum_literal2.bz
// error: enum literal is not allowed as a top-level expression
enum E
{
	a,
	b,
}

function test()
{
	.a;
}
